--- a/themes/Mainroad/layouts/partials/menu.html
+++ b/themes/Mainroad/layouts/partials/menu.html
@@ -1,6 +1,6 @@
 {{- if .Site.Menus.main }}
 <nav class="menu">
-	<!--button class="menu__btn" aria-haspopup="true" aria-expanded="false" tabindex="0"-->
+	<button class="menu__btn" aria-haspopup="true" aria-expanded="false" tabindex="0">
 		<span class="menu__btn-title" tabindex="-1">{{ T "menu_label" }}</span>
 	</button>
 	<ul class="menu__list">
